# llm_prompting_tools

./: .gitignore  README.md
dialog_opening/: README.md  SPECIAL_PROMPT_INSTRUCTIONS.txt  dialog_opening.py  prompt_instructions.txt  pyproject.toml  requirements.txt
dialog_opening/dialog_opening/: __init__.py
dialog_opening/lib/: detect_file_type.py  file_info.py  gitignore_utils.py  listing.py  prompt_generation.py
dialog_opening/tests/: test_detect_file_type.py  test_dialog_opening.py  test_file_info.py  test_gitignore_utils.py  test_listing.py  test_prompt_generation.py
python_unittest_tool/: README.md  pyproject.toml  requirements_for_llm_prompt.txt
python_unittest_tool/python_unittest_tool/: __init__.py  code_extractor.py  dependency_tracker.py  import_analyzer.py  main.py  project_indexer.py  prompt_generator.py  test_parser.py  test_runner.py
python_unittest_tool/tests/: test_code_extractor.py  test_dependency_tracker.py  test_import_analyzer.py  test_main.py  test_project_indexer.py  test_prompt_generator.py  test_test_parser.py  test_test_runner.py
